# autoresearch

./: .secrets.baseline  Dockerfile  analysis.ipynb  prepare.py  train.py
.harness/: config.yaml  run-gates.sh
orchestrator/: cli.py  experiment_orchestrator.py  pyproject.toml
orchestrator/agents/: research_agent.py
orchestrator/bridges/: agenthub_bridge.py  economic_bridge.py  ondevice_bridge.py  self_learning_bridge.py
orchestrator/tests/: test_bridge.py  test_orchestrator.py
